add html elements to index page.

--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -4,6 +4,22 @@
     <title>Your Title Here</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Cat World</h1>
+    <p>This is a page about <strong>cats</strong>! Cats are like <em>Tigers</em> but smaller. </p>
+    <h2>Types of Cats</h2>
+    <p>The following are three different types of cats in a unordered list:</p>
+    <ul>
+      <li>Big Cats</li>
+      <li>Medium Cats</li>
+      <li>Small Cats</li>
+    </ul>
+    <p>Here are three different names of cats that you should know about:</p>
+    <ol>
+      <li>Maine Coon</li>
+      <li>Tabby</li>
+      <li>Egyptian Mau</li>
+    </ol>
+    <h2>Taking Care of Cats</h2>
+    <p>Click <a href="http://www.vetstreet.com/cats/">here</a> to get information on how you should take care of your cat.</p>
   </body>
 </html>
