Add colspan and rowspan table for release 1

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -27,5 +27,21 @@
         <td>Small</td>
       </tr>
     </table>
+    <h1>Practice Colspan/Rowspan</h1>
+    <table border = 1>
+      <tr>
+        <td colspan=2>Colspan</td>
+        <td>Cell3</td>
+      </tr>
+      <tr>
+        <td>Cell1</td>
+        <td>Cell2</td>
+        <td rowspan=2>Rowspan</td>
+      </tr>
+      <tr>
+        <td>Cell1</td>
+        <td>Cell2</td>
+      </tr>
+    </table>
   </body>
 </html>
