add h1 headers to body

--- a/html/moon_bootz/index.html
+++ b/html/moon_bootz/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Welcome to MoonBootz</title>
+    <title>Index</title>
   </head>
   <body>
-    Your Content Here
+    <h1>Welcome to MoonBootz</h1>
   </body>
 </html>
