--- a/html/moon_bootz/product_details.html
+++ b/html/moon_bootz/product_details.html
@@ -4,6 +4,6 @@
     <title>Product Details</title>
   </head>
   <body>
-    Your Content Here
+    <h1>MoonBootz Product Details</h1>
   </body>
 </html>
