--- a/html/moon_bootz/index.html
+++ b/html/moon_bootz/index.html
@@ -4,6 +4,11 @@
     <title>Index</title>
   </head>
   <body>
+    <nav>
+      <a href="contact.html">Contact</a>
+      <a href="product_details.html">Product Details</a>
+      <a href="legal/waiver.html">Waiver</a>
+    </nav>
     <h1>Welcome to MoonBootz</h1>
   </body>
 </html>
