--- a/html/moon_bootz/product_details.html
+++ b/html/moon_bootz/product_details.html
@@ -4,6 +4,9 @@
     <title>Product Details</title>
   </head>
   <body>
+    <header>
+      <a href="index.html">Home</a>
+    </header>
     <h1>MoonBootz Product Details</h1>
   </body>
 </html>
