add moon bootz image to index with license and image url info. Add high jump image to waiver

--- a/html/moon_bootz/legal/waiver.html
+++ b/html/moon_bootz/legal/waiver.html
@@ -7,6 +7,7 @@
   <header>
     <a href="../index.html">Home</a>
   </header>
+  <img src="../images/high_jump.jpg" alt="moon boots" />
   <p>Moon Bootz (TM) is not responsible for anything that happens to you while wearing their product. Ever. You might want to invest in a helmet.</p>
 </body>
 </html>
