--- a/html/forms/practice-forms.html
+++ b/html/forms/practice-forms.html
@@ -1,10 +1,10 @@
 <!Doctype html>
-<html>
+<html lang="en">
   <head>
-    <title></title>
+    <title>CarData</title>
   </head>
   <body>
-    <form name="adventure" action="success.html" method="post">
+    <form name="cardata" action="success.html" method="post">
       <fieldset>
         <div>
           <label>Full name:</label>
@@ -17,9 +17,10 @@
         </div>
 
         <div>
-          <label>Password:</label>
-          <input type="password" name="password">
+          <label>Age:</label>
+          <input type="number" name="age" value="">
         </div>
+
       </fieldset>
 
       <fieldset>
@@ -39,8 +40,26 @@
         </div>
 
         <div>
+          <label>How Much did you car cost?</label>
+          <select name="carcost">
+            <option value="cost1">$1000 - $9,999</option>
+            <option value="cost2">$10,000 - $19,999</option>
+            <option value="cost3">$20,000 - $29,999</option>
+            <option value="cost4">$30,000 - $39,999</option>
+            <option value="cost5">$40,000 - $49,999</option>
+            <option value="cost6">$50,000 - $59,999</option>
+            <option value="cost7">$60,000 - $69,999</option>
+            <option value="cost8">Greater than $70,000</option>
+          </select>
+        </div>
+
+        <div>
           <label>When did you get your car?</label>
           <input type="date" name="date">
+        </div>
+
+        <div>
+          <textarea name = "experience" rows = "10" cols = '80'>Experience with car:</textarea>
         </div>
 
         <div>
