Add HTML Semantic Elements to index.html

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>HTML Page
-    </title>
+    <title>HTML Page</title>
   </head>
   <body>
+    <header>This is the header for the Page</header>
+    <main>
+      <h1>h1 for the main</h1>
+      <p>this is the h1 for the main</p>
+      <article>
+        <h1>Article</h1>
+        <p>This is text for the article</p>
+        <section>
+          <h1>A Section Heading</h1>
+          <p>This is the text for the section</p>
+        </section>
+      </article>
+    </main>
+    <nav>
+      <a href="/home.html">Home</a>
+      <a href="/next.html">Next Page</a>
+    </nav>
+    <aside>
+      <p>Advertisement would go here!</p>
+    </aside>
+    <footer>This is the page footer</footer>
   </body>
 </html>
