--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
-<html>
+<html lang='en-US'>
   <head>
     <title>HTML Page</title>
+    <meta charset='utf-8'>
   </head>
   <body>
     <header>This is the header for the Page</header>
